service.yaml
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: vdbench-test
  name: vdbench-test
spec:
  ports:
  - name: web
    port: 8080
    protocol: TCP
    targetPort: 5570
  selector:
    app: vdbench-test
  type: ClusterIP
  sessionAffinity: None
...
